verif/test/deca/context/invalid/op-bin-bad-type-verif.res
src/test/deca/context/invalid/op-bin-bad-type.deca:14:8: Incompatible types for binary operation: int and boolean
